k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kanni-ai
  labels:
    name: kanni-ai
